<?xml version="1.0"?>
<package format="2">
  <name>pedestrian_tracking</name>
  <version>0.0.1</version>
  <description>A ROS package for pedestrian tracking using YOLO and various trackers to prevent accidents.</description>

  <maintainer email="casey@example.com">casey</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>image_view</exec_depend>
  <exec_depend>python3-ultralytics</exec_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>  

</package>